vcs-log: fix hiding diff preview panel in FileHistory
FileHistoryDiffProcessor does not implement ChangeViewDiffRequestProcessor.
Instead, destroy and re-create the panel when needed.

Fix regression after 8c10354d243eb5e6d35682e1d1a848d0a0c1a41b

GitOrigin-RevId: 27dcec12d559e57c3b3072472faa6e1d95f751b4